--- a/TPfinalTaller/src/vista/VentanaPrincipal.form
+++ b/TPfinalTaller/src/vista/VentanaPrincipal.form
@@ -31,7 +31,7 @@
       </Constraints>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
-        <Property name="columns" type="int" value="3"/>
+        <Property name="columns" type="int" value="4"/>
         <Property name="rows" type="int" value="1"/>
       </Layout>
       <SubComponents>
@@ -133,6 +133,11 @@
                     <Property name="text" type="java.lang.String" value="Modificar Tarea"/>
                   </Properties>
                 </Component>
+                <Component class="javax.swing.JButton" name="jbElimTarea">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Eliminar Tarea"/>
+                  </Properties>
+                </Component>
               </SubComponents>
             </Container>
             <Container class="javax.swing.JPanel" name="jPanel10">
@@ -215,6 +220,22 @@
             </Container>
           </SubComponents>
         </Container>
+        <Container class="javax.swing.JPanel" name="jPanel11">
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+          <SubComponents>
+            <Component class="javax.swing.JButton" name="jbCreaServ">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Crear Servicio"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="jbElimServ">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Eliminar Servicio"/>
+              </Properties>
+            </Component>
+          </SubComponents>
+        </Container>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="jPanel7">
@@ -225,7 +246,7 @@
       </Constraints>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
-        <Property name="columns" type="int" value="3"/>
+        <Property name="columns" type="int" value="4"/>
         <Property name="rows" type="int" value="1"/>
       </Layout>
       <SubComponents>
@@ -291,6 +312,29 @@
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Cliente&gt;"/>
+              </AuxValues>
+            </Component>
+          </SubComponents>
+        </Container>
+        <Container class="javax.swing.JScrollPane" name="jScrollPane4">
+          <Properties>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+              <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
+                <TitledBorder title="Servicios"/>
+              </Border>
+            </Property>
+          </Properties>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+          <SubComponents>
+            <Component class="javax.swing.JList" name="jlServicios">
+              <Properties>
+                <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
+                  <StringArray count="0"/>
+                </Property>
+              </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Servicio&gt;"/>
               </AuxValues>
             </Component>
           </SubComponents>
