--- a/TPfinalTaller/src/vista/VentanaUsuarioNuevo.form
+++ b/TPfinalTaller/src/vista/VentanaUsuarioNuevo.form
@@ -117,6 +117,17 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfEmail">
+          <Properties>
+            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[100, 19]"/>
+            </Property>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[100, 19]"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtfEmailActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -132,6 +143,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfContra">
+          <Properties>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[100, 19]"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
@@ -147,6 +163,14 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfTel">
+          <Properties>
+            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[100, 19]"/>
+            </Property>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[100, 19]"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
